added new files

--- a/trep/Makefile
+++ b/trep/Makefile
@@ -1,5 +1,11 @@
 all:
-	gcc -O0 -g -o ti trep.c tree.c bl.c
+	gcc -O0 -g -o ti trep.c bl.c tree.c var.c stack.c
 
 tree:
 	gcc -O0 -g -o t tree.c
+
+var:
+	gcc -O0 -g -o v var.c
+
+stack:
+	gcc -O0 -g -o s stack.c
