add variables and new targets

--- a/trep/Makefile
+++ b/trep/Makefile
@@ -1,9 +1,10 @@
 ct = gcc
 flags = -O0 -g -o
 src = trep.c bl.c tree.c var.c stack.c
+out = ti
 
 all:
-	$(ct) $(flags) ti $(src)
+	$(ct) $(flags) $(out) $(src)
 
 tree:
 	$(ct) $(flags) t tree.c
@@ -13,3 +14,7 @@ var:
 
 stack:
 	$(ct) $(flags) s stack.c
+
+r:
+	rm $(out)
+	$(ct) $(flags) $(out) $(src)
