--- a/trep/Makefile
+++ b/trep/Makefile
@@ -1,10 +1,11 @@
 ct = gcc
 flags = -O0 -g -o
 src = trep.c bl.c tree.c var.c stack.c
+libs = -lm
 out = ti
 
 all:
-	$(ct) $(flags) $(out) $(src)
+	$(ct) $(flags) $(out) $(src) $(libs)
 
 tree:
 	$(ct) $(flags) t tree.c
