--- a/trep/Makefile
+++ b/trep/Makefile
@@ -1,8 +1,9 @@
 ct = gcc
-flags = -O0 -g -o
+flags = -O0 -g -Wall -o
 src = trep.c bl.c tree.c var.c stack.c
 libs = -lm
 out = ti
+dir = samples
 
 all:
 	$(ct) $(flags) $(out) $(src) $(libs)
@@ -19,3 +20,12 @@ stack:
 r:
 	rm $(out)
 	$(ct) $(flags) $(out) $(src)
+
+test:
+	./$(out) $(dir)/eval.trep
+	./$(out) $(dir)/if.trep
+	./$(out) $(dir)/input.trep
+	./$(out) $(dir)/logic.trep
+	./$(out) $(dir)/math.trep
+	./$(out) $(dir)/output.trep
+	./$(out) $(dir)/var.trep
